# Backend/auth-service/src/main/java/com/cloud/auth_service/controller/StaffController.java
@@ -1,0 +1,16 @@
+package com.cloud.auth_service.controller;
+
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping("/api/v1/staff")
+public class StaffController {
+
+    @GetMapping
+    public ResponseEntity<String> sayHello() {
+        return ResponseEntity.ok("Hello Staff");
+    }
+}
