# Backend/auth-service/src/main/java/com/cloud/auth_service/dto/SignUpRequest.java
@@ -1,0 +1,17 @@
+package com.cloud.auth_service.dto;
+
+import com.cloud.auth_service.entity.Role;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class SignUpRequest {
+    private String email;
+    private String password;
+    private Role role;
+}
